0.23
 - Fix MANIFEST file.

0.22 2025-01-23T08:37:25+01:00
 - Add cover cleanup use case.
 - Add edition number cleanup use case.
 - Add publication place cleanup use case.
 - Add support for 'translated edition' in P31.
 - Add tests for three ISBNs in book edition.
 - Update copyright years.

0.21 2024-11-25T23:55:13+01:00
 - Add clean_issn() helper subroutine.
 - Add detection of ISSN in series.
 - Add edition number cleanup use case.
 - Add series name cleanup use case.
 - Add test for cycle.

0.20 2024-11-22T19:41:33+01:00
 - Add edition number cleanup use case.
 - Fix 787i field existing.

0.19 2024-11-12T08:57:15+01:00
 - Add another cover cleanup use case.
 - Rewrite setting of label to 'mul'.

0.18 2024-11-04T21:23:56+01:00
 - Add another edition number cleanup use case.
 - Add processing of cycles.

0.17 2024-11-02T18:32:52+01:00
 - Add another publication place cleanup use case.
 - Add another edition number cleanup use case.
 - Add processing of collective ISBN.
 - Implement collective to clean_cover().
 - Rewrite Kramerius of MZK to Kramerius of CDL.

0.16 2024-09-19T10:23:56+02:00
 - Add support for new use case of number of pages.
 - Fix error in case of not detected publishing house.
 - Improve callback to series to add argument with no_warn flag.

0.15 2024-09-18T21:40:20+02:00
 - Fix of not-defined NKCR AUT ID in people.

0.14 2024-08-10T23:13:54+02:00
 - Add deprecated rank to deprecated values.
 - Fix deprecated value.

0.13 2024-07-05T00:26:05+02:00
 - Add look_for_external_id() method to Wikidata.
 - Rename internal subroutine _oclc() to _lccn().
 - Rewrite Transform to store people external ids in 'external_ids'
   parameter.
 - Sort subroutines in Item.

0.12 2024-07-04T23:15:01+02:00
 - Fix subfield processing for multiple values.
 - Rewrite Item to use external_ids() method to generate external ids.
 - Rewrite Transform to store external ids in 'external_ids' parameter.

0.11 2024-07-03T16:36:27+02:00