@@ -1,5 +1,6 @@
 0.23
  - Fix MANIFEST file.
+ - Improve tests.
 
 0.22 2025-01-23T08:37:25+01:00
  - Add cover cleanup use case.
